Rydder en del sonar ting og forenkler koden + vars bruk.